--- a/Common/Resources/Captions.resx
+++ b/Common/Resources/Captions.resx
@@ -101,4 +101,13 @@
   <data name="Error" xml:space="preserve">
     <value>Ошибка</value>
   </data>
+  <data name="FailedSend" xml:space="preserve">
+    <value>Ошибка отправки</value>
+  </data>
+  <data name="MainForm_DoubleClickAccountViolation_Ошибка_доступа" xml:space="preserve">
+    <value>Ошибка доступа</value>
+  </data>
+  <data name="AccessError" xml:space="preserve">
+    <value>Ошибка доступа</value>
+  </data>
 </root>
