--- a/Common/Resources/Texts.resx
+++ b/Common/Resources/Texts.resx
@@ -98,40 +98,7 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-  <data name="Error" xml:space="preserve">
-    <value>Ошибка</value>
-  </data>
-  <data name="FailedSend" xml:space="preserve">
-    <value>Ошибка отправки</value>
-  </data>
-  <data name="MainForm_DoubleClickAccountViolation_Ошибка_доступа" xml:space="preserve">
-    <value>Ошибка доступа</value>
-  </data>
-  <data name="AccessError" xml:space="preserve">
-    <value>Ошибка доступа</value>
-  </data>
-  <data name="CannotAccess" xml:space="preserve">
-    <value>Доступ заблокирован</value>
-  </data>
-  <data name="FieldIsRequired" xml:space="preserve">
-    <value>Недостаточно данных</value>
-  </data>
-  <data name="Delete" xml:space="preserve">
-    <value>Удаление</value>
-  </data>
-  <data name="TimeoutExpired" xml:space="preserve">
-    <value>Время ожидания истекло</value>
-  </data>
-  <data name="Warning" xml:space="preserve">
-    <value>Предупреждение</value>
-  </data>
-  <data name="Print" xml:space="preserve">
-    <value>Печать</value>
-  </data>
-  <data name="Send" xml:space="preserve">
-    <value>Отправка</value>
-  </data>
-  <data name="Information" xml:space="preserve">
-    <value>Информация</value>
+  <data name="SelectedCar" xml:space="preserve">
+    <value>Выбранный автомобиль: </value>
   </data>
 </root>
