--- a/Common/Resources/Captions.resx
+++ b/Common/Resources/Captions.resx
@@ -134,4 +134,10 @@
   <data name="Information" xml:space="preserve">
     <value>Информация</value>
   </data>
+  <data name="CannotCreateMail" xml:space="preserve">
+    <value>Невозможно создать письмо</value>
+  </data>
+  <data name="RemoveFromSale" xml:space="preserve">
+    <value>Снятие с продажи</value>
+  </data>
 </root>
