Delete EngineTypeList and EngineTypes

--- a/Common/Resources/Captions.resx
+++ b/Common/Resources/Captions.resx
@@ -146,4 +146,7 @@
   <data name="Add" xml:space="preserve">
     <value>Добавление</value>
   </data>
+  <data name="Load" xml:space="preserve">
+    <value>Загрузка</value>
+  </data>
 </root>
